# tree-sitter-playground

./: .gitignore  README.md  pyproject.toml  treesitter_playground.py
templates/: index.html
tests/: test_playground.py
